force-app/main/default/objects/Backlog__c/Backlog__c.object-meta.xml
<CustomObject>
    <label>Backlog</label>
    <nameField>
        <displayFormat>TKT - {0000}</displayFormat>
        <label>Ticket</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>