force-app/main/default/objects/Backlog__c/fields/Atividade__c.field-meta.xml
<CustomField>
    <fullName>Atividade__c</fullName>
    <label>Atividade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>