force-app/main/default/objects/Backlog__c/fields/Atribuido__c.field-meta.xml
<CustomField>
    <fullName>Atribuido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Atribuido à</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <value>001i00000085QYbAAM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Backlogs</relationshipLabel>
    <relationshipName>Backlogs</relationshipName>
    <type>Lookup</type>
</CustomField>