force-app/main/default/objects/Backlog__c/fields/Bandeira__c.field-meta.xml
<CustomField>
    <fullName>Bandeira__c</fullName>
    <formula>CASE(
    TEXT(Prioridade__c),
    &quot;Imediato&quot;, &quot;⚫&quot;,  
    &quot;Alto&quot;, &quot;🔴&quot;,      
    &quot;Médio&quot;, &quot;🟡&quot;,     
    &quot;Baixo&quot;, &quot;🟢&quot;,     
    &quot;⚪&quot;               
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bandeira</label>
    <type>Text</type>
</CustomField>