force-app/main/default/objects/Backlog__c/fields/cssCard__c.field-meta.xml
<CustomField>
    <fullName>cssCard__c</fullName>
    <formula>IF(
   (
     ( IF(
           ISBLANK(Ticket_Finalizado_Em__c), 
           NOW(), 
           Ticket_Finalizado_Em__c
       ) 
     - Ticket_Criado_Em__c
     ) * 24
   ) &gt; Tempo_de_Execucao__c,
   &quot;kanban-card red-card&quot;,
   &quot;kanban-card&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>cssCard</label>
    <type>Text</type>
</CustomField>