force-app/main/default/objects/Backlog__c/fields/Data_Estimada_de_T_rmino__c.field-meta.xml
<CustomField>
    <fullName>Data_Estimada_de_T_rmino__c</fullName>
    <label>Data de Término Prevista</label>
    <type>Date</type>
</CustomField>