force-app/main/default/objects/Backlog__c/fields/Departamento2__c.field-meta.xml
<CustomField>
    <fullName>Departamento2__c</fullName>
    <label>Departamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>