force-app/main/default/objects/Backlog__c/fields/Excedeu_Tempo_Estimado__c.field-meta.xml
<CustomField>
    <fullName>Excedeu_Tempo_Estimado__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Data_Estimada_de_T_rmino__c)),
  IF(
    ISBLANK(Ticket_Finalizado_Em__c),
    NOW() &gt; DATETIMEVALUE(Data_Estimada_de_T_rmino__c),
    Ticket_Finalizado_Em__c &gt; DATETIMEVALUE(Data_Estimada_de_T_rmino__c)
  ),
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excedeu Tempo Estimado</label>
    <type>Checkbox</type>
</CustomField>