force-app/main/default/objects/Backlog__c/fields/FUP__c.field-meta.xml
<CustomField>
    <fullName>FUP__c</fullName>
    <formula>IF(
    TEXT(Status__c) = &quot;Recusado&quot;,
    &quot;🚫 Recusado&quot;,
    IF(
        ISBLANK(Data_Estimada_de_T_rmino__c),
        &quot;⚪ Sem data estimada&quot;,
        IF(
            ISBLANK(Ticket_Finalizado_Em__c),
            /* Ticket ainda aberto */
            IF(
                (Data_Estimada_de_T_rmino__c - DATEVALUE(NOW())) &lt; 0,
                &quot;🔴 Atrasado&quot;,
                IF(
                    (Data_Estimada_de_T_rmino__c - DATEVALUE(NOW())) &lt;= 4,
                    &quot;🟠 Próximo do Prazo&quot;,
                    &quot;🟢 Dentro do Prazo&quot;
                )
            ),
            /* Ticket finalizado */
            IF(
                DATEVALUE(Ticket_Finalizado_Em__c) &gt; Data_Estimada_de_T_rmino__c,
                &quot;🔴 Finalizado com Atraso&quot;,
                &quot;🟢 Finalizado no Prazo&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FUP</label>
    <type>Text</type>
</CustomField>