force-app/main/default/objects/Backlog__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Novo</fullName>
            </value>
            <value>
                <fullName>Em Refinamento</fullName>
            </value>
            <value>
                <fullName>Em Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Analise de Qualidade</fullName>
            </value>
            <value>
                <fullName>Finalizado</fullName>
            </value>
            <value>
                <fullName>Recusado</fullName>
            </value>
            <value>
                <fullName>Aguardando Validação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>