force-app/main/default/objects/Backlog__c/fields/Tempo_de_Atendimento__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_Atendimento__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Ticket_Finalizado_Em__c)),

    /* Quando finalizado */
    IF(FLOOR(Ticket_Finalizado_Em__c - Ticket_Criado_Em__c) &gt; 0,
        TEXT(FLOOR(Ticket_Finalizado_Em__c - Ticket_Criado_Em__c)) &amp; &quot; dias, &quot;,
        &quot;&quot;
    ) &amp;
    IF(FLOOR(MOD((Ticket_Finalizado_Em__c - Ticket_Criado_Em__c) * 24, 24)) &gt; 0,
        TEXT(FLOOR(MOD((Ticket_Finalizado_Em__c - Ticket_Criado_Em__c) * 24, 24))) &amp; &quot; horas, &quot;,
        &quot;&quot;
    ) &amp;
    TEXT(FLOOR(MOD((Ticket_Finalizado_Em__c - Ticket_Criado_Em__c) * 24 * 60, 60))) &amp; &quot; minutos&quot;,

    /* Quando ainda aberto */
    IF(FLOOR(TODAY() - DATEVALUE(Ticket_Criado_Em__c)) &gt; 0,
        TEXT(FLOOR(TODAY() - DATEVALUE(Ticket_Criado_Em__c))) &amp; &quot; dias, &quot;,
        &quot;&quot;
    ) &amp;
    IF(FLOOR(MOD((NOW() - Ticket_Criado_Em__c) * 24, 24)) &gt; 0,
        TEXT(FLOOR(MOD((NOW() - Ticket_Criado_Em__c) * 24, 24))) &amp; &quot; horas, &quot;,
        &quot;&quot;
    ) &amp;
    TEXT(FLOOR(MOD((NOW() - Ticket_Criado_Em__c) * 24 * 60, 60))) &amp; &quot; minutos&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tempo de Atendimento</label>
    <type>Text</type>
</CustomField>