force-app/main/default/objects/Backlog__c/fields/Tempo_de_Execucao__c.field-meta.xml
<CustomField>
    <fullName>Tempo_de_Execucao__c</fullName>
    <inlineHelpText>Tempo nescessario para execução do ticket, em horas</inlineHelpText>
    <label>Tempo de Execução (Em Horas)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>