force-app/main/default/objects/Backlog__c/fields/Ticket_Criado_Em__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Criado_Em__c</fullName>
    <description>Data e hora da criação do ticket</description>
    <label>Ticket Criado Em</label>
    <type>DateTime</type>
</CustomField>