force-app/main/default/objects/Backlog__c/fields/Ticket_Finalizado_Em__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Finalizado_Em__c</fullName>
    <label>Ticket Finalizado Em</label>
    <type>DateTime</type>
</CustomField>