force-app/main/default/objects/Backlog__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Melhoria</fullName>
            </value>
            <value>
                <fullName>Novo Recurso</fullName>
            </value>
            <value>
                <fullName>Projeto</fullName>
            </value>
            <value>
                <fullName>Solicitação</fullName>
            </value>
            <value>
                <fullName>Administrativo</fullName>
                <isActive>false</isActive>
                <label>Administrativo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>