force-app/main/default/objects/Backlog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Atividade__c</columns>
    <columns>Status__c</columns>
    <columns>Tipo__c</columns>
    <columns>FUP__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Ticket_Criado_Em__c</columns>
    <columns>Data_Estimada_de_T_rmino__c</columns>
    <columns>Ticket_Finalizado_Em__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Atribuido__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>