force-app/main/default/objects/Backlog__c/listViews/Kanban.listView-meta.xml
<ListView>
    <fullName>Kanban</fullName>
    <columns>NAME</columns>
    <columns>Atividade__c</columns>
    <columns>Atribuido__c</columns>
    <columns>Status__c</columns>
    <columns>Ticket_Criado_Em__c</columns>
    <columns>Ticket_Finalizado_Em__c</columns>
    <filterScope>Mine</filterScope>
    <label>Kanban</label>
</ListView>